@@ -16,20 +16,20 @@ require "irb/ext/workspaces.rb"
 # :stopdoc:
 module IRB
   module ExtendCommand
-    class Workspaces<Nop
+    class Workspaces < Nop
       def execute(*obj)
         irb_context.workspaces.collect{|ws| ws.main}
       end
     end
 
-    class PushWorkspace<Workspaces
+    class PushWorkspace < Workspaces
       def execute(*obj)
         irb_context.push_workspace(*obj)
         super
       end
     end
 
-    class PopWorkspace<Workspaces
+    class PopWorkspace < Workspaces
       def execute(*obj)
         irb_context.pop_workspace(*obj)
         super
