@@ -15,25 +15,25 @@ require "irb/ext/multi-irb"
 # :stopdoc:
 module IRB
   module ExtendCommand
-    class IrbCommand<Nop
+    class IrbCommand < Nop
       def execute(*obj)
         IRB.irb(nil, *obj)
       end
     end
 
-    class Jobs<Nop
+    class Jobs < Nop
       def execute
         IRB.JobManager
       end
     end
 
-    class Foreground<Nop
+    class Foreground < Nop
       def execute(key)
         IRB.JobManager.switch(key)
       end
     end
 
-    class Kill<Nop
+    class Kill < Nop
       def execute(*keys)
         IRB.JobManager.kill(*keys)
       end
