@@ -324,7 +324,7 @@ class Prime
 
   # An implementation of +PseudoPrimeGenerator+ which uses
   # a prime table generated by trial division.
-  class TrialDivisionGenerator<PseudoPrimeGenerator
+  class TrialDivisionGenerator < PseudoPrimeGenerator
     def initialize
       @index = -1
       super
@@ -345,7 +345,7 @@ class Prime
   # This is a pseudo-prime generator, suitable on
   # checking primality of an integer by brute force
   # method.
-  class Generator23<PseudoPrimeGenerator
+  class Generator23 < PseudoPrimeGenerator
     def initialize
       @prime = 1
       @step = nil
